--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<main class="main">
+    <div class="input-container">
+        <form action="">
+            <input type="text">
+            <button>Добавить</button>
+        </form>
+    </div>
+
+    <div class="list">
+        <div class="list-item">
+            <input type="text">
+            <span></span>
+            <input type="image">
+        </div>
+    </div>
+</main>
+
 <script src="js/script.js"></script>
 </body>
 </html>
