--- a/index.html
+++ b/index.html
@@ -17,12 +17,8 @@
         </form>
     </div>
 
-    <div class="list">
-        <div class="list-item">
-            <input type="text">
-            <span></span>
-            <input type="image">
-        </div>
+    <div id="list" class="list">
+
     </div>
 </main>
 
