--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ToDo List 2</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+<h1>Список задач 2.0</h1>
 <main class="main">
     <div class="input-container">
         <form action="">
-            <input type="text">
-            <button>Добавить</button>
+            <input id="input" type="text">
+            <button id="add">Добавить</button>
         </form>
     </div>
 
