--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
 <h1>Список задач 2.0</h1>
 <main class="main">
     <div class="input-container">
-        <form action="">
-            <input id="input" type="text">
-            <button id="add">Добавить</button>
-        </form>
+        <input id="input" type="text">
+        <button id="add">Добавить</button>
     </div>
 
     <div id="list" class="list">
@@ -27,5 +26,7 @@
 </main>
 
 <script src="js/script.js"></script>
+<script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
+
 </body>
 </html>
