--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
 <h1>Список задач 2.0</h1>
 <main class="main">
     <div class="input-container">
-        <input id="input" type="text">
-        <button id="add">Добавить</button>
+        <form id="form" action="#">
+            <input id="input" type="text">
+            <button type="submit" id="add">Добавить</button>
+        </form>
     </div>
 
     <div id="list" class="list">
