--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <style type="text/css">
+        body {
+            background-color: red;
+        }
+    </style>
 </head>
 <body>
 <h1>Список задач 2.0</h1>
@@ -17,7 +22,7 @@
     <div class="input-container">
         <form id="form" action="#">
             <input id="input" type="text">
-            <button type="submit" id="add">Добавить</button>
+            <button type="submit" id="add">Add</button>
         </form>
     </div>
 
